# isla

./: .gitignore  README.md
doc/: sketch.cpp
experiments/: Segmentation.hs  test1.hs
src/: CMakeLists.txt  Dialogues.cpp  Dialogues.hh  Grid.cpp  Grid.hh  GridData.hh  IslaCanvas.cpp  IslaCanvas.hh  IslaCompute.cpp  IslaCompute.hh  IslaFrame.cpp  IslaFrame.hh  IslaModel.cpp  IslaModel.hh  IslaPreferences.cpp  IslaPreferences.hh  Makefile  Makefile.holocene  game.cpp  ids.hh  isla.cpp  isla.hh
src/bitmaps/: edit.xpm  isla.xpm  pan.xpm  select.xpm  zoom-fit.xpm  zoom-in.xpm  zoom-out.xpm  zoom-select.xpm
src/cmake/Modules/: FindNetCDF.cmake
src/help/: CMakeLists.txt  Makefile  isla.tex
src/isla/: CMakeLists.txt  dialogs.cpp  dialogs.h  game.cpp  game.h  isla.cpp  isla.h  isla.xpm
src/isla/bitmaps/: isla.xpm
src/lib/: CMakeLists.txt  Grid.cpp  GridData.cpp  GridData.hh
src/test/: CMakeLists.txt  Makefile  std_mask.nc  test_Grid.cpp  test_GridData.cpp  test_LoadMask.cpp
test-data/: hadcm3_mask.nc  hadcm3l_mask.nc  hadgem2_mask.nc  std_mask.nc
