CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(ISLA)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
SET(CMAKE_CXX_FLAGS_RELEASE "-O2 -DISLA_DEBUG")
SET(CMAKE_CXX_FLAGS_DEBUG "-g -DISLA_DEBUG")
SET(CMAKE_CXX_FLAGS_PROFILE "-g -fprofile-arcs -ftest-coverage")
SET(CMAKE_BUILD_TYPE Release)
ENABLE_TESTING()

FIND_PACKAGE(Boost REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

SET(NETCDF_CXX "YES")
FIND_PACKAGE(NetCDF REQUIRED)
INCLUDE_DIRECTORIES(${NETCDF_INCLUDES})

FIND_PACKAGE(wxWidgets REQUIRED core base html)
INCLUDE(${wxWidgets_USE_FILE})

SET(isla_SRCS isla.cpp
              IslaFrame.cpp
              IslaModel.cpp
              IslaCompute.cpp
              IslaCanvas.cpp
              IslaPreferences.cpp
              Dialogues.cpp
              Grid.cpp)
ADD_EXECUTABLE(isla ${isla_SRCS})
TARGET_LINK_LIBRARIES(isla ${wxWidgets_LIBRARIES})
TARGET_LINK_LIBRARIES(isla ${NETCDF_LIBRARIES})
SET_TARGET_PROPERTIES(isla PROPERTIES RUNTIME_OUTPUT_DIRECTORY bin)

ADD_SUBDIRECTORY(help share/isla)

ADD_SUBDIRECTORY(test)
