INCLUDE_DIRECTORIES(${ISLA_SOURCE_DIR}/lib)
LINK_DIRECTORIES(${ISLA_BINARY_DIR}/lib)

FIND_PACKAGE(Boost REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

SET(NETCDF_CXX "YES")
FIND_PACKAGE(NetCDF REQUIRED)
INCLUDE_DIRECTORIES(${NETCDF_INCLUDES})

FIND_PACKAGE(wxWidgets REQUIRED core base)
INCLUDE(${wxWidgets_USE_FILE})

SET(isla_SRCS isla.cpp)
ADD_EXECUTABLE(isla ${isla_SRCS})
TARGET_LINK_LIBRARIES(isla islalib)
TARGET_LINK_LIBRARIES(isla ${wxWidgets_LIBRARIES})
TARGET_LINK_LIBRARIES(isla ${NETCDF_LIBRARIES})
