INCLUDE_DIRECTORIES(${ISLA_SOURCE_DIR})

FIND_PACKAGE(Boost REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

SET(NETCDF_CXX "YES")
FIND_PACKAGE(NetCDF REQUIRED)
INCLUDE_DIRECTORIES(${NETCDF_INCLUDES})

SET(TESTS test_Grid test_GridData test_LoadMask)
FOREACH(t ${TESTS})
  SET(${t}_SRCS ${t}.cpp ${ISLA_SOURCE_DIR}/Grid.cpp)
  ADD_EXECUTABLE(${t} ${${t}_SRCS})
  TARGET_LINK_LIBRARIES(${t} ${NETCDF_LIBRARIES})
  ADD_TEST(${t} ${CMAKE_CURRENT_BINARY_DIR}/${t})
ENDFOREACH(t)

SET(TEST_DATA std_mask.nc test_grid.nc)
FOREACH(d ${TEST_DATA})
  FILE(COPY ${d} DESTINATION .)
ENDFOREACH(d)
